# ml-course

./: .gitignore  pyproject.toml
.github/: ci.yaml
scripts/: format-code.sh  format-shell.sh  format-toml.sh
scripts/ci/: lint-code.sh  lint-shell.sh  lint-toml.sh
solutions/: task_06.ipynb  task_07.ipynb  task_08.ipynb  task_09.ipynb  task_10.ipynb
