[project]
name = "ml-course"
version = "0.1.0"
description = "ML Course homeworks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "albumentations>=2.0.8",
  "gdown>=6.1.0",
  "ipykernel>=7.1.0",
  "ipython>=9.9.0",
  "ipywidgets>=8.1.8",
  "jupyter>=1.1.1",
  "matplotlib>=3.10.7",
  "nbqa>=1.9.1",
  "matplotlib>=3.10.9",
  "numpy>=2.4.6",
  "pandas>=3.0.3",
  "scikit-learn>=1.7.2",
  "seaborn>=0.13.2",
  "torch>=2.12.0",
  "scipy>=1.16.3",
  "opencv-python-headless>=4.13.0.92",
  "pillow>=12.2.0",
  "segmentation-models-pytorch>=0.5.0",
  "torchvision>=0.27.0",
  "tqdm>=4.68.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["solutions"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
extend-include = ["*.ipynb"]
exclude = [
  ".venv",
  ".git",
  "__pycache__",
  "*.pyc",
]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [".venv/"]

[dependency-groups]
dev = [
  "black>=24.8.0",
  "black[jupyter]>=25.11.0",
  "mypy>=1.14.1",
  "ruff>=0.14.8",
]
